# ether-cat-soft

./: .gitignore  README.md  commands.py  helpers2.py  pyproject.toml  run_hom.sh  run_ppmpdo.sh  start.py  test3.py  test4.py
cooethercat/: __init__.py  bus.py  epos4.py  epos4bus.py  epos4registers.py  helpers.py
old_csu_sw/: EPOS4_repeatability_and_longevity_tests.ipynb  High_precision_EPOS4_repeatability_and_longevity_tests.ipynb  LongTermTesting.ipynb  LongTermTesting.py  Position_camera_initial_exploration.ipynb  Readme.md  SOEM_exploration.ipynb  Simple_move_forever.py  SpeedTest.py  run_forever_and_record.py
old_csu_sw/_Archive/: maxon_motor_EPOS4_0170h_6950h_0000h_0000h_ESI.xml  ueye_camera_parameters.ini
old_csu_sw/helpers/: CSU_config_defaults.py  EPOS4.py  position_camera_helpers.py
settings/: masterSettings.yaml  serverSettings.yaml
src/: helpers.py  master.py  server.py
src/HAL/pysoem/: pysoemHelpers.py  pysoemMaster.py
test/: sample_positions.csv
